# RAG2

./: .env.example  PRD.md  README.md  alembic.ini  architecture.md  docker-compose.yml  managerprompt.md  project_context.md  project_sequence.txt  projectmanager.md  projectplan.md  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  __init__.py
backend/app/: __init__.py  config.py  logging.py  main.py
backend/app/routers/: __init__.py  ingestion.py  retrieval.py
backend/app/schemas/: __init__.py  ingestion.py  retrieval.py
backend/cli/: __init__.py  debug.py  ingest.py  run_ingest.py
backend/db/: __init__.py  base.py  models.py  session.py
backend/db/migrations/: __init__.py  env.py
backend/db/migrations/versions/: 0001_initial.py  0002_ingestion_pipeline.py
backend/ingestion/: __init__.py  chunker.py  dedup.py  pipeline.py
backend/retrieval/: __init__.py  dependencies.py  models.py  service.py
backend/services/: __init__.py  embedding_service.py  exceptions.py  vector_store.py
backend/tests/: conftest.py  stub_embed.py  test_health.py  test_logging_request_id.py  test_migrations.py  test_models_relationships.py
backend/tests/services/: test_embedding_service.py  test_vector_store.py
tests/: conftest.py
tests/api/: test_ingestion_status.py  test_retrieval_api.py
tests/fixtures/docs/: README.txt  sample.txt  sample_copy.txt
tests/ingestion/: __init__.py  conftest.py  test_pipeline.py
tests/retrieval/: test_service.py
